--- a/codesquare/src/main/resources/templates/lecture/lectureIntroWritePage.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureIntroWritePage.html
@@ -10,10 +10,8 @@
 <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
 <!-- <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/> -->
 <th:block layout:fragment="css">
-	<link rel="stylesheet" type="text/css"
-		th:href="@{/static/styles/lecture/lectureCustom.css}">
-	<link rel="stylesheet" type="text/css"
-		th:href="@{/webjars/dropzone/5.5.0/dropzone.css}">
+	<link rel="stylesheet" type="text/css"	th:href="@{/static/styles/lecture/lectureCustom.css}">
+	<link rel="stylesheet" type="text/css"	th:href="@{/webjars/dropzone/5.5.0/dropzone.css}">
 
 </th:block>
 <style type="text/css">
