--- a/codesquare/src/main/resources/static/styles/lecture/lectureCustom.css
+++ b/codesquare/src/main/resources/static/styles/lecture/lectureCustom.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-.form-control{
-  all:unset;
+.form-control:not(.admin-header){
+  /* all:unset; */
   margin-right:0px;
 }
 .form-inline{
@@ -360,16 +360,39 @@
 	height: 100%;
 	background: #c7cacb;
 	position: absolute;
-	left: 32px;
+	left: 70px;
 	top: 0;
 }
-
+.lecctureview-comments-container .comments-list:before{
+	content: '';
+	width: 2px;
+	height: 100%;
+	background: #c7cacb;
+	position: absolute;
+	left: 31px;
+	top: 0;
+}
 .comments-list:after {
 	content: '';
 	position: absolute;
 	background: #c7cacb;
 	bottom: 0;
-	left: 27px;
+	top:101%;
+	left: 67px;
+	width: 7px;
+	height: 7px;
+	border: 3px solid #dee1e3;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+}
+.lecctureview-comments-container  .comments-list:after {
+	content: '';
+	position: absolute;
+	background: #c7cacb;
+	bottom: 0;
+	top:101%;
+	left: 28px;
 	width: 7px;
 	height: 7px;
 	border: 3px solid #dee1e3;
@@ -601,15 +624,15 @@
 }
 .video-overaybox{
 	position:absolute;
-	top:0;
+	/* top:0; */
 	margin:auto;
 	
 }
 #modal-container{
 	position:absolute;
 	text-align: center;
-	top:54%;
-	left:46%;
+/* 	top:54%;
+	left:46%; */
 }
 .btn-yt{
   width:100%;
@@ -619,11 +642,25 @@
   margin-right:auto;
   margin-top:10px;
 }
-.modal-overay-wrap:not(#modal-container){
-	background: black;
-	width:1618px;
-  	height:910.125px;
+
+.video-overaybox{
+	position:absolute;
+	width:100%;
+	height:100%;
+	left:0;
+	top:0;
+}
+.modal-overay-wrap{
+	background-color:black;
+	height:100%;
 	opacity: .7;
+}
+#modal-container{
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #lecture-content label, .card-header{
@@ -635,10 +672,12 @@
 	font-size:25px;
 }
 .lecture-list-container{
-  position:absolute;
-  top:60px;
-  left:100%;
-  z-index: 1000;
+    position: absolute;
+    z-index: 1000;
+    display:none;
+    /* top: 48px;
+    right: -2px; */
+    
 }
 .lecture-list-container>a:hover{
 	font-weight: bold;
