--- a/codesquare/src/main/resources/static/styles/main_styles.css
+++ b/codesquare/src/main/resources/static/styles/main_styles.css
@@ -538,3 +538,19 @@ section
   position:relative;
   left:-25%;
 }
+
+/* scroll style */
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+ 
+*::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ddd;
+  border-radius: 20px;
+}
