--- a/codesquare/src/main/resources/templates/admin/boardControl.html
+++ b/codesquare/src/main/resources/templates/admin/boardControl.html
@@ -15,35 +15,182 @@
 <body>
   <div class="wrapper" layout:fragment="content">
     <div class="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Dashboard</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="material-icons">notifications</i> Notifications
-                </a>
-              </li>
-              <!-- your navbar here -->
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- End Navbar -->
       <div class="content">
         <div class="container-fluid">
-          <!-- your content here -->
-        </div>
+				<!-- Modal-alert -->
+					<div class="modal fade" id="modal-board-alert" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					  <div class="modal-dialog" role="document">
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <h5 class="modal-title" id="modal-alert-title">Warning</h5>
+					        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					          <span aria-hidden="true">&times;</span>
+					        </button>
+					      </div>
+							<div class="modal-body" >
+								<i class="fas fa-exclamation-triangle fa-x4"></i><label id="modal-alert-area"></label>
+					      </div>
+					      <div class="modal-footer">
+					        <button id="btn-delete-cancel" type="button" class="btn btn-warning" data-dismiss="modal">확인</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>					
+					<!-- End Of Modal-alert -->
+					<!-- Modal-Control-LectureDelete -->
+					<div class="modal fade" id="modal-board-delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					  <div class="modal-dialog" role="document">
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <h5 class="modal-title" id="modal-title">게시글 삭제</h5>
+					        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					          <span aria-hidden="true">&times;</span>
+					        </button>
+					      </div>
+							<div class="modal-body" >
+						      	<ul id="modal-checked-lecturelist" class="list-group" style="border-bottom:2px dashed #dddddd;height: 200px;overflow-y: scroll;">
+								</ul>
+								<i class="material-icons">description</i></label>게시글 을(를) 삭제하시겠습니까?
+					      </div>
+					      <div class="modal-footer">
+					        <button id="btn-delete-cancel" type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+					        <button id="btn-delete-yes" type="button" class="btn btn-primary">삭제</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>					
+					<!-- End Of Modal-Control-LectureDelete -->
+					<!-- Modal-Control-LecturePendig -->
+					<div class="modal fade" id="modal-lecture-pending" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					  <div class="modal-dialog" role="document">
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <h5 class="modal-title" id="modal-title">강의 보류 설정</h5>
+					        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					          <span aria-hidden="true">&times;</span>
+					        </button>
+					      </div>
+							<div class="modal-body" >
+								<i class="material-icons">ondemand_video</i><label id="modal-lecture-title"></label>선택된 강의
+						      	<ul id="modal-checked-pendinglecturelist" class="list-group" style="border-bottom:2px dashed #dddddd;height: 200px;overflow-y: scroll;">
+								</ul>
+					      </div>
+					      <div class="modal-footer">
+					        <button id="btn-pending-cancel" type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+					        <button id="btn-pending-clear" type="button" class="btn btn-primary">해제하기</button>
+					        <button id="btn-pending-yes" type="button" class="btn btn-primary">보류하기</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>					
+					<!-- End Of Modal-Control-LecturePendig -->
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="card-header card-header-primary">
+									<h3 class="card-title">게시판 관리</h3>
+									<div class="row">
+										<div class="col-lg-3 btn-category">
+											<form class="form-inline ml-auto"
+												action="/admin/board/search" method="get">
+												<div class="form-group no-border">
+													<input id="input-searchbox" type="text"
+														class="form-control" name="content" placeholder="Search">
+												</div>
+												<button id="btn-search" type="submit" class="btn btn-neutral btn-icon btn-round">
+													<i class="material-icons">search</i>
+												</button>
+											</form>
+										</div>
+										<div class="col-lg-2 h4">
+											<label id="div-alert-area"></label>
+										</div>
+										<div id="" class="col-lg-7"	style="text-align: right;">
+											
+										</div>
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="table-responsive">
+									<div class="row" style="border-bottom: 1px solid #dddddd;">
+											<div class="col-md-6 ">
+											<button id="btn-allcheck" class="btn btn-warning btn-round btn-sm" data-status="off">
+											  <i class="far fa-check-square"></i> All Check
+											</button>
+											</div>
+											<div class="d-flex col-md-6 justify-content-end">
+												<button id="btn-lectureStatus-change" class="btn btn-warning btn-round btn-sm" data-toggle="modal" >
+												  <i class="fas fa-exchange-alt"></i> 게시글 삭제
+												</button>	
+
+												<!-- <button id="btn-lecture-modify" class="btn btn-warning btn-round btn-sm" data-toggle="modal">
+												  <i class="fas fa-exchange-alt"></i> 강의 수정
+												</button> -->
+													
+											</div>
+										</div>
+										<table id="table-boardinfo" class="table" style="text-align: center">
+											<thead class=" text-primary">
+												<th>Check</th>
+												<th colspan="2" class="text-left">Title</th>
+												<th>Like</th>
+												<th>Hit</th>
+												<th>WriteDate</th>
+											</thead>
+											<tbody>
+												<tr th:each="item:${boardList}" th:id="@{post-}+${item.id}" class="tr-boardInfo">
+													<td>
+														<div class="form-check">
+															<label class="form-check-label"> 
+																<input name="form-check-list"	class="form-check-input" type="checkbox" value="">
+																	<span class="form-check-sign"><span class="check"></span></span>
+															</label>
+														</div>
+													</td>
+													<td colspan="2" class="text-left" ><a class="lecture-link"  th:href="@{/admin/board/}+${item.id}" th:text="@{${item.title}}"></a></td>
+													<td th:text="@{${item.nickName}}">작성자</td>
+													<td th:text="@{${item.likeCount}}">좋아요</td>
+													<td th:text="@{${item.hit}}">조회수</td>
+													<td th:text="@{${item.writeDate}}">완강인원</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+									<div align="center">
+										<ul
+											class="pagination justify-content-center  no-margin pull-right ">
+											<li class="page-item" th:if="${pageMaker.prev} == true">
+												<a class="page-link"
+												th:href="@{/admin/board(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum})}">&laquo;</a>
+											</li>
+											<li class="page-item"
+												th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"
+												th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
+												<a class="page-link"
+												th:href="@{/admin/board(page=${idx},perPageNum=${pageMaker.cri.perPageNum})}"
+												th:text="${idx}"></a>
+											</li>
+											<li class="page-item"
+												th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
+												<a class="page-link"
+												th:href="@{/admin/board(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum})}">&raquo;</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div sec:authorize="hasAnyRole('ROLE_2', 'ROLE_3')"
+						class="d-flex flex-row-reverse bg-light">
+						<a class="p-2 btn btn-secondary btn-lg" th:href="@{learn/intro}">강의등록</a>
+					</div>
+					<th:block layout:fragment="script">
+						<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
+						<script type="text/javascript" th:src="@{/static/js/admin/utilCustom.js}"></script>
+						<!-- <script type="text/javascript" th:src="@{/static/js/admin/adminLectureCustom.js}"></script> -->
+					</th:block>
+				</div>
       </div>
       
     </div>
