--- a/codesquare/src/main/resources/templates/admin/dashboard.html
+++ b/codesquare/src/main/resources/templates/admin/dashboard.html
@@ -18,33 +18,6 @@
 <body>
   <div class="wrapper" layout:fragment="content">
     <div class="main-panel">
-      <!-- Navbar -->
-      
-      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-        <div class="container-fluid">
-        
-          <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Dashboard</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="material-icons">notifications</i> Notifications
-                </a>
-              </li>
-              <!-- your navbar here -->
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- End Navbar -->
       <div class="content">
         <div class="container-fluid">
         <div class="row chart-area">
@@ -70,7 +43,7 @@
                   <div class="card-icon">
                     <i class="fas fa-newspaper"></i>
                   </div>
-                  <p class="card-category">최근 올라온 게시글 통계</p>
+                  <p class="card-category">최근 게시글 통계</p>
                   <h3 class="card-title" th:text="@{${newPostCount}}"></h3>
                 </div>
                 <div class="card-footer">
