--- a/codesquare/src/main/resources/templates/admin/memberControl.html
+++ b/codesquare/src/main/resources/templates/admin/memberControl.html
@@ -15,8 +15,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
 <!-- default header name is X-CSRF-TOKEN -->
-<meta id="_csrf_header" name="_csrf_header"
-	th:content="${_csrf.headerName}" />
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}" />
 </head>
 
 <body>
@@ -143,7 +142,7 @@
 					        </button>
 					      </div>
 					      <div class="modal-body row" >
-					      	<ul id="modal-checked-authorlist" class="list-group col-md-7" style="border-right: 2px dashed #dddddd">
+					      	<ul id="modal-checked-authorlist" class="list-group col-md-7" style="border-right: 2px dashed #dddddd; height: 250px;overflow-y: scroll;">
 							</ul>
 							<div class="form-group col-md-5" style="margin:auto;">
 								<label for="exampleFormControlSelect1">Exchange Author</label>
@@ -173,7 +172,7 @@
 					      </div>
 					      <div class="modal-body row">
 					      	<div class="col-md-7">
-						      	<ul id="modal-checked-restrcitlist" class="list-group" style="border-right: 2px dashed #dddddd">
+						      	<ul id="modal-checked-restrcitlist" class="list-group" style="border-right: 2px dashed #dddddd;height: 200px;overflow-y: scroll;">
 								</ul>
 							</div>
 							<div class="form-group col-md-5" style="margin:auto;">
@@ -229,7 +228,7 @@
 									<div class="table-responsive">
 										<div class="row" style="border-bottom: 1px solid #dddddd;">
 											<div class="col-md-6 ">
-											<button id="btn-allcheck" class="btn btn-warning btn-round btn-sm" data-status="false">
+											<button id="btn-allcheck" class="btn btn-warning btn-round btn-sm" data-status="off">
 											  <i class="far fa-check-square"></i> All Check
 											</button>
 											</div>
@@ -259,10 +258,10 @@
 													th:id="@{memberId-}+${member.userId}">
 													<td>
 														<div class="form-check">
-															<label class="form-check-label"> <input
-																class="form-check-input" type="checkbox" value="">
-																<span class="form-check-sign"> <span
-																	class="check"></span>
+															<label class="form-check-label"> 
+															<input name="form-check-list" class="form-check-input" type="checkbox" value="">
+																<span class="form-check-sign"> 
+																<span class="check"></span>
 															</span>
 															</label>
 														</div>
@@ -321,6 +320,7 @@
 		</div>
 		<th:block layout:fragment="script">
 			<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
+			<script th:src="@{/static/js/admin/utilCustom.js}"></script>
 			<script th:src="@{/static/js/admin/adminMemberCustom.js}"></script>
 			<!-- <script th:src="@{/static/js/mainCustom.js}"></script> -->
 		</th:block>
