--- a/codesquare/src/main/resources/templates/fragments/adminSide.html
+++ b/codesquare/src/main/resources/templates/fragments/adminSide.html
@@ -1,55 +1,80 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
 <!-- default header name is X-CSRF-TOKEN -->
-<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
-<header class="main-header" th:fragment="sideFragment">
-<div class="sidebar" data-color="purple" data-background-color="white">
-      <!--
+<meta id="_csrf_header" name="_csrf_header"
+	th:content="${_csrf.headerName}" />
+<header class="admin-header main-header" th:fragment="sideFragment">
+	<div class="sidebar" data-color="purple" data-background-color="white">
+		<!--
       Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
       Tip 2: you can also add an image using data-image tag
   -->
-      <div class="logo">
-        <a class="navbar-brand simple-text logo-mini" href="/"><img th:src="@{/static/images/logo.png}" alt="noimg"  style="width:100px;"/></a>
-        <a href="/" class="simple-text logo-normal">CodeSquare</a>
+		<div class="logo">
+			<a class="navbar-brand simple-text logo-mini" href="/"><img
+				th:src="@{/static/images/logo.png}" alt="noimg"
+				style="width: 100px;" /></a> <a href="/" class="simple-text logo-normal">CodeSquare</a>
+		</div>
+		<div class="sidebar-wrapper">
+			<ul class="nav">
+				<li id="dashboard" class="nav-item"><a class="nav-link"
+					href="/admin"> <i class="material-icons">dashboard</i>
+						<p>Dashboard</p>
+				</a></li>
+				<li id="board" class="nav-item"><a class="nav-link"
+					href="/admin/board"> <i class="far fa-newspaper"></i>
+						<p>게시판관리</p>
+				</a></li>
+				<li id="member" class="nav-item "><a class="nav-link"
+					href="/admin/member"> <i class="fas fa-users-cog"></i>
+						<p>회원관리</p>
+				</a></li>
+				<li id="lecture" class="nav-item "><a class="nav-link"
+					href="/admin/lecture"> <i class="fas fa-chalkboard"></i>
+						<p>강의관리</p>
+				</a></li>
+				<li id="keyword" class="nav-item "><a class="nav-link"
+					href="/admin/keyword"> <i class="material-icons">spellcheck</i>
+						<p>금칙어관리</p>
+				</a></li>
+				<!-- your sidebar here -->
+			</ul>
+		</div>
+	</div>
+	<div class="main-panel"sec:authorize="isAuthenticated()">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+        <div class="container-fluid">
+          <div class="navbar-wrapper">
+            <a class="navbar-brand" href="/admin">CodeSquare</a>
+          </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="navbar-toggler-icon icon-bar"></span>
+            <span class="navbar-toggler-icon icon-bar"></span>
+            <span class="navbar-toggler-icon icon-bar"></span>
+          </button>
+         <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#pablo" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="material-icons">person</i>
+                  <p class="d-lg-none d-md-block" th:text="@{${session.userId}}">
+                    
+                  </p>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+                  <a class="dropdown-item" href="#">Profile</a>
+                  <a class="dropdown-item" href="#">Settings</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Log out</a>
+                </div>
+              </li>
+            </ul>
+        </div>
+      </nav>
       </div>
-      <div class="sidebar-wrapper">
-        <ul class="nav">
-          <li id="dashboard" class="nav-item">
-            <a class="nav-link" href="/admin">
-              <i class="material-icons">dashboard</i>
-              <p>Dashboard</p>
-            </a>
-          </li>
-          <li id="board" class="nav-item">
-            <a class="nav-link" href="/admin/board">
-              <i class="far fa-newspaper"></i>
-              <p>게시판관리</p>
-            </a>
-          </li>
-          <li id="member" class="nav-item ">
-            <a class="nav-link" href="/admin/member">
-              <i class="fas fa-users-cog"></i>
-              <p>회원관리</p>
-            </a>
-          </li>
-          <li id="lecture" class="nav-item ">
-            <a class="nav-link" href="/admin/lecture">
-              <i class="fas fa-chalkboard"></i>
-              <p>강의관리</p>
-            </a>
-          </li>
-          <li id="keyword" class="nav-item ">
-            <a class="nav-link" href="/admin/keyword">
-              <i class="material-icons">spellcheck</i>
-              <p>금칙어관리</p>
-            </a>
-          </li>
-          <!-- your sidebar here -->
-        </ul>
-      </div>
-    </div>
 </header>
 
 </html>
