--- a/codesquare/src/main/resources/templates/fragments/footer.html
+++ b/codesquare/src/main/resources/templates/fragments/footer.html
@@ -4,11 +4,7 @@
 <div class="container">
           <div class="row row-30">
             <div class="col-md-4 col-xl-5">
-<<<<<<< HEAD
               <div class="pr-xl-4"><a class="brand" href="/"><img class="brand-logo-light" th:src="@{/static/images/logo.png}" alt="noimg" style="width:100px;"></a>
-=======
-              <div class="pr-xl-4"><a class="brand" href="/"><img class="brand-logo-light" src="/static/images/logo.png" alt="noImg" style="width:100px;"></a>
->>>>>>> refs/heads/master
                 <p>BitCamp_Gangnam Team.CodeSquare<br/>
                    현업 프로그래머 및 지망생들을 위한 스터디사이트
                 </p>
@@ -49,5 +45,6 @@
           <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
           <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
           <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
+        </div>
         </div>
       </footer>
